# Idv2

./: CONTEXT.md  README.md
docs/: IDv2_essay.docx  NOTES.md  PROJECT-PLAN.md  REPORT-v0.1.md  TIMELINE.md
rust-workspace/: .gitignore  Cargo.toml  README.md
rust-workspace/.keys/: PUBKEYS.txt  aggregation.json  authority.json  enclave-hmac-anambra.key  enclave-hmac-fct.key  enclave-hmac-kano.key  enclave-hmac-lagos.key  enclave-hmac.key  relayer.json
rust-workspace/.keys/programs/: ballot.json  election_registry.json  tally.json  voter_registry.json
rust-workspace/clients/: Cargo.toml
rust-workspace/clients/src/: register_voter.rs  verify_tally.rs
rust-workspace/clients/src/admin/: main.rs
rust-workspace/clients/src/verify/: main.rs
rust-workspace/clients/src/voter/: main.rs
rust-workspace/dashboard/: Cargo.toml
rust-workspace/dashboard/data/: nimc.json
rust-workspace/dashboard/src/: main.rs
rust-workspace/dashboard/static/: booth.html  index.html
rust-workspace/enclave/: Cargo.toml
rust-workspace/enclave/src/: ballot_auth.rs  commitment.rs  counter.rs  credential.rs  hsm.rs  issuance.rs  lib.rs  nullifier.rs
rust-workspace/programs/ballot/: Cargo.toml
rust-workspace/programs/ballot/src/: instructions.rs  lib.rs  merkle.rs
rust-workspace/programs/ballot/tests/: tests.rs
rust-workspace/programs/election_registry/: Cargo.toml
rust-workspace/programs/election_registry/src/: instructions.rs  lib.rs
rust-workspace/programs/election_registry/tests/: tests.rs
rust-workspace/programs/tally/: Cargo.toml
rust-workspace/programs/tally/src/: instructions.rs  lib.rs
rust-workspace/programs/tally/tests/: tests.rs
rust-workspace/programs/voter_registry/: Cargo.toml
rust-workspace/programs/voter_registry/src/: instructions.rs  lib.rs  merkle.rs
rust-workspace/programs/voter_registry/tests/: tests.rs
rust-workspace/scripts/: airdrop.sh  demo.sh  deploy.sh  devnet-e2e.sh  install.sh  keygen.sh  setup-softhsm.sh
rust-workspace/scripts/.keys/: PUBKEYS.txt  aggregation.json  authority.json  relayer.json
rust-workspace/scripts/.keys/programs/: ballot.json  election_registry.json  tally.json  voter_registry.json
rust-workspace/smt-server/: Cargo.toml
rust-workspace/smt-server/src/: main.rs  tree.rs
rust-workspace/tests/: Cargo.toml
rust-workspace/tests/src/: main.rs
rust-workspace/tests/tests/: lifecycle.rs
