[workspace]
resolver = "2"
members = [
    "programs/election_registry",
    "programs/voter_registry",
    "programs/ballot",
    "programs/tally",
    "clients",
    "enclave",
    "dashboard",
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Adrian"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies pinned at the workspace level so every crate uses the same version.
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }

# Solana BPF release profile. Matches the settings solana-program-library and
# Anchor use. Overflow checks stay ON in release because voting programs cannot
# afford silent integer wraparound. LTO + single codegen unit reduce BPF size.
[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
