[package]
name = "dashboard"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dashboard-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
# axum = "0.7"
# tower-http = { version = "0.5", features = ["fs"] }
# futures = "0.3"
