[package]
name = "dashboard"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dashboard-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace             = true
serde.workspace              = true
serde_json.workspace         = true
tokio.workspace              = true
axum.workspace               = true
tower-http.workspace         = true
futures-util.workspace       = true
solana-rpc-client.workspace  = true
solana-sdk.workspace         = true
solana-commitment-config.workspace = true
solana-sdk-ids.workspace     = true
rand.workspace               = true
clap.workspace               = true
hmac.workspace               = true
sha2.workspace               = true
bincode.workspace            = true
reqwest.workspace            = true
hex                          = "0.4"

ballot         = { path = "../programs/ballot",         features = ["no-entrypoint"] }
voter_registry = { path = "../programs/voter_registry", features = ["no-entrypoint"] }
