[package]
name = "enclave"
version.workspace = true
edition.workspace = true

[[bin]]
name = "enclave-server"
path = "src/bin/server.rs"

[[bin]]
name = "key_ceremony"
path = "src/bin/key_ceremony.rs"

[dependencies]
# PKCS#11 session management. SoftHSM2 for dev; same interface on real HSM.
cryptoki.workspace         = true
# Key derivation (HKDF-SHA256) and signatures.
hkdf.workspace             = true
sha2.workspace             = true
sha3.workspace             = true
rand.workspace             = true
curve25519-dalek.workspace = true
# Error + runtime.
anyhow.workspace           = true
thiserror.workspace        = true
tokio.workspace            = true
serde.workspace            = true
serde_json.workspace       = true
clap.workspace             = true
borsh = { version = "1.5", default-features = false, features = ["derive"] }

# HTTP server (enclave-server binary).
axum.workspace             = true
bincode.workspace          = true
hmac.workspace             = true
hex                        = "0.4"

# Solana transaction construction.
solana-sdk.workspace                = true
solana-sdk-ids.workspace            = true
solana-commitment-config.workspace  = true
solana-rpc-client.workspace         = true

# Reused chain-layout types from programs (link as library, no BPF entrypoint).
election_registry = { path = "../programs/election_registry", features = ["no-entrypoint"] }
voter_registry    = { path = "../programs/voter_registry",    features = ["no-entrypoint"] }
ballot            = { path = "../programs/ballot",            features = ["no-entrypoint"] }

[dev-dependencies]
tempfile = "3"
