[package]
name = "smt-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "smt-server"
path = "src/main.rs"

[dependencies]
axum.workspace       = true
tower-http.workspace = true
tokio.workspace      = true
serde.workspace      = true
serde_json.workspace = true
sha2.workspace       = true
anyhow.workspace     = true
thiserror.workspace  = true
